Fix PMD and solve some deprecations